Development, fix test

--- a/db/seeds/artists.yml
+++ b/db/seeds/artists.yml
@@ -8,17 +8,17 @@ artists:
   - Calle 13
   - BTS    
   - El ultimo de la fila
-  # - Atercipelados
-  # - Alci Acosta    
-  # - Green Day
-  # - Tormenta
-  # - Chuck Berry
-  # - Joe Cuba
-  # - Compay Segundo
-  # - Buena Vista Social Club
-  # - Masacre
-  # - Pantera
-  # - Ruben Blades
-  # - Los Hermanos Zuleta
-  # - Carlos Vives
-  # - Muse
+  - Atercipelados
+  - Alci Acosta    
+  - Green Day
+  - Tormenta
+  - Chuck Berry
+  - Joe Cuba
+  - Compay Segundo
+  - Buena Vista Social Club
+  - Masacre
+  - Pantera
+  - Ruben Blades
+  - Los Hermanos Zuleta
+  - Carlos Vives
+  - Muse
