--- a/config/database.yml
+++ b/config/database.yml
@@ -17,5 +17,5 @@ production:
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV['DATABASE_URL'] %>
-  username: <%= ENV.fetch('DB_USERNAME', 'spotify-api') %>
-  password: <%= ENV.fetch('DB_PASSWORD', 'spotify-api') %>
+  username: <%= ENV('DB_USERNAME') %>
+  password: <%= ENV('DB_PASSWORD') %>
