Spotify test, change db

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,5 +17,5 @@ production:
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV['DATABASE_URL'] %>
-  username: <%= ENV('DB_USERNAME') %>
-  password: <%= ENV('DB_PASSWORD') %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
