Spotify test, change db

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,3 +17,5 @@ production:
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV['DATABASE_URL'] %>
+  username: user_admin
+  password: user_admin
