--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,19 @@
-development: &default
+default: &default
   adapter: postgresql
-  encoding: unicode
-  database: spotify-api_development
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV.fetch('DB_USERNAME', 'spotify-api') %>
-  password: <%= ENV.fetch('DB_PASSWORD', 'spotify-api') %>
-  host: <%= ENV.fetch('DB_HOST', 'localhost') %>
-  port: <%= ENV.fetch('DB_PORT', '5432') %>
+  timeout: 5000
 
-test: &test
+development:
+  <<: *default
+  database: spotify-api_development
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
   <<: *default
   database: spotify-api_test
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: spotify-api_production
